# Sub0_PolkDevTool

./: .vercelignore  ADVANCED_NOTIFICATIONS.md  CHATBOT_AI_ASSISTANT.md  CODE_OF_CONDUCT.md  CONTEXT7_TROUBLESHOOTING.md  CONTRIBUTING.md  DEMO-SIMULATION.md  DEPLOYMENT.md  DIAGNOSTICO_ERROR_API.md  GEMINI_SETUP.md  GROQ_SETUP.md  HACKATHON_OPTIMIZATION.md  HYDRATION_FIX.md  LEARNING_SECTION.md  LICENSE  MAIN_TRACK_QUICK_REFERENCE.md  MARKETING_BOUNTY_QUICK_REFERENCE.md  MARKETING_BOUNTY_STRATEGY.md  MARKETPLACE_DOWNLOAD.md  MARKET_RESEARCH.md  MILESTONE_2_PLAN.md  MODELOS_FUNCIONALES.md  OPTIMIZATION_SUMMARY.md  POLKADOT_MAIN_TRACK.md  POLKADOT_NETWORKS.md  README.md  RESPONSIVE_FIXES.md  RESPONSIVE_IMPROVEMENTS.md  SMART_CONTRACTS_STRATEGY.md  SMART_CONTRACTS_SUMMARY.md  SUBWALLET-INTEGRATION.md  SUBWALLET_REAL_INTEGRATION.md  SUBWALLET_SETUP.md  TEMPLATES.md  TRACKS_COVERAGE.md  VERCEL_DEPLOYMENT.md  VERIFICACION_API_ROUTES.md  WRITE_FUNCTIONS_SIMULATION.md  docker-compose.yml  env.example  (+8 more)
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
app/analytics/: page.tsx
app/chatbot/: page.tsx
app/check-models/: page.tsx
app/context7-test/: page.tsx
app/debug/: page.tsx
app/deploy/: page.tsx
app/docs/: page.tsx
components/: ClientLayout.tsx  ServiceWorker.tsx
contracts/: README.md
contracts/arkiv-storage/: Cargo.toml  lib.rs
docs/: RESPONSIVE_COMPONENTS.md
lib/: api-client.ts
lib/ai/: groq.ts  (+5 more)
public/: manifest.json  sw.js
scripts/: deploy-to-paseo.js
types/: ai.ts  contracts.ts  groq.d.ts  wallet.ts
(+78 files in other folders)
