[package]
name = "arkiv_storage"
version = "0.1.0"
authors = ["Polkadot DevKit Team"]
edition = "2021"

[lib]
name = "arkiv_storage"
path = "lib.rs"
crate-type = ["cdylib"]

[dependencies]
ink = { version = "5.0.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"] }

[dev-dependencies]
ink_e2e = "5.0.0"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

